@@ -1,3 +1,8 @@
+* Sep 12 2000 hship
+
+Beef up the ShowInspector component, adding default images and rollover images, and
+add parameters to allow those to be overriden.
+
 * Sep 11 2000 hship
 
 Add a Java Code tab to the Inspector.
